[gd_scene load_steps=12 format=2]

[ext_resource path="res://numbers/speed.png" type="Texture" id=1]
[ext_resource path="res://numbers/Lights.png" type="Texture" id=2]
[ext_resource path="res://numbers/heart.png" type="Texture" id=3]
[ext_resource path="res://numbers/damage.png" type="Texture" id=4]
[ext_resource path="res://lvlup.gd" type="Script" id=5]
[ext_resource path="res://numbers/2.png" type="Texture" id=6]
[ext_resource path="res://numbers/1.png" type="Texture" id=7]
[ext_resource path="res://numbers/3.png" type="Texture" id=8]
[ext_resource path="res://numbers/6890.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://numbers/17124.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="TextureButton" parent="Panel"]
margin_left = 103.244
margin_top = 47.1626
margin_right = 359.245
margin_bottom = 303.163
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
texture_normal = ExtResource( 3 )
stretch_mode = 1

[node name="speed" type="TextureButton" parent="Panel"]
margin_left = 557.738
margin_top = 32.1086
margin_right = 813.738
margin_bottom = 288.109
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 1 )

[node name="light" type="TextureButton" parent="Panel"]
margin_left = 327.032
margin_top = 42.8114
margin_right = 583.032
margin_bottom = 298.811
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 2 )

[node name="damage" type="TextureButton" parent="Panel"]
margin_left = 763.759
margin_top = 8.62158
margin_right = 1019.76
margin_bottom = 264.622
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )

[node name="1heart" type="TextureRect" parent="Panel"]
visible = false
margin_left = 73.8775
margin_top = 181.408
margin_right = 228.878
margin_bottom = 303.408
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2heart" type="TextureRect" parent="Panel"]
visible = false
margin_left = 73.8775
margin_top = 327.515
margin_right = 228.878
margin_bottom = 449.515
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3heart" type="TextureRect" parent="Panel"]
visible = false
margin_left = 73.0
margin_top = 461.008
margin_right = 224.64
margin_bottom = 583.008
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3damage" type="TextureRect" parent="Panel"]
visible = false
margin_left = 770.127
margin_top = 461.0
margin_right = 921.766
margin_bottom = 573.473
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3speed" type="TextureRect" parent="Panel"]
visible = false
margin_left = 549.758
margin_top = 461.0
margin_right = 701.398
margin_bottom = 576.651
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3light" type="TextureRect" parent="Panel"]
visible = false
margin_left = 308.201
margin_top = 461.008
margin_right = 459.84
margin_bottom = 583.008
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2light" type="TextureRect" parent="Panel"]
visible = false
margin_left = 315.311
margin_top = 327.0
margin_right = 470.311
margin_bottom = 453.97
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2speed" type="TextureRect" parent="Panel"]
visible = false
margin_left = 548.727
margin_top = 327.0
margin_right = 703.727
margin_bottom = 448.625
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2damage" type="TextureRect" parent="Panel"]
visible = false
margin_left = 772.342
margin_top = 327.0
margin_right = 927.342
margin_bottom = 451.297
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1damage" type="TextureRect" parent="Panel"]
visible = false
margin_left = 773.171
margin_top = 181.408
margin_right = 928.171
margin_bottom = 303.408
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1speed" type="TextureRect" parent="Panel"]
visible = false
margin_left = 540.822
margin_top = 181.0
margin_right = 695.822
margin_bottom = 301.163
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1light" type="TextureRect" parent="Panel"]
visible = false
margin_left = 303.751
margin_top = 181.0
margin_right = 458.751
margin_bottom = 301.359
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Panel"]
margin_left = 966.23
margin_top = 7.41624
margin_right = 1094.23
margin_bottom = 135.416
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.3784
margin_top = -54.9729
margin_right = -2.37842
margin_bottom = -2.9729
custom_fonts/mono_font = SubResource( 1 )
text = "number of points: 8"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/hp" to="." method="_on_hp_pressed"]
[connection signal="pressed" from="Panel/speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="Panel/light" to="." method="_on_light_pressed"]
[connection signal="pressed" from="Panel/damage" to="." method="_on_damage_pressed"]
[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_TextureButton_pressed"]
